# SecurityRatConnector

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  securityratconnector.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.builder/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  objects.inv  search.html
example/: example.py
securityratconnector/: securityratconnector.py
tests/: test_securityratconnector.py
