[tool.poetry]
name = "SecurityRatConnector"
version = "0.1.0"
description = "An API connector for SecurityRat"
license = "Apache-2.0"
authors = ["masteroflittle <6892495+masteroflittle@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/masteroflittle/SecurityRatConnector"
packages = [
    { include = "securityratconnector" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
